--- a/nginx.conf
+++ b/nginx.conf
@@ -7,20 +7,24 @@ events {
 http {
 	include       mime.types;
 	default_type  application/octet-stream;
-
+	
+	# Log Format for GoAccess		
 	log_format main '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$upstream_response_time"';
 	access_log  /usr/jails/jvm/var/log/http-access.log  main;
 
 	sendfile        on;
 	keepalive_timeout  65;
 	gzip  on;
-
+	
+	# OpenS3.net main website
 	upstream myapp {
 		server 10.200.1.1:8080;
 	}
+	# WeatherBot admin backend
 	upstream noti {
 		server 10.200.1.1:3000;
 	}
+	# HTTP website. Redirects to HTTPS
 	server {
 		listen 80;
 		server_name localhost;
@@ -36,6 +40,7 @@ http {
 		return 301 https://$host$request_uri;
 
 	}
+	# HTTPS website. Certificate provided by lets encrypt certbot.
 	server {
 		listen       443 ssl http2;
 		server_name  localhost;
@@ -52,6 +57,7 @@ http {
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 			proxy_set_header X-Forwarded-Proto $scheme;
 		}
+		# Catch the /ws for GoAccess and route to GoAccess daemon.
 		location /ws {
 			proxy_pass http://10.200.1.1:7890;
 			proxy_http_version 1.1;
@@ -59,6 +65,7 @@ http {
 			proxy_set_header Connection "Upgrade";
 		}
 	}
+	# WeatherBot Admin Backend
 	server {
 		listen       5000 ssl http2;
 		server_name  localhost;
